--- a/src/app/shared/app-template/header/header.component.html
+++ b/src/app/shared/app-template/header/header.component.html
@@ -8,7 +8,7 @@
                         <!-- Logo -->
                          <div class="col-xl-2 col-lg-2"> 
                            <div class="logo2 app-header">
-                            <a href="index.html">
+                            <a [routerLink]="['/organization']">
                                 <img src="assets/img/logo/logo.png" alt="" class="app-logo">
                             </a>
                             <h1 class="app-title">{{ 'app-name' | translate }}</h1>
