--- a/src/app/shared/components/generic-form/generic-form.component.html
+++ b/src/app/shared/components/generic-form/generic-form.component.html
@@ -6,13 +6,19 @@
     [showButton]="buttonVisibility.showInsert!"
     [disabled]="isLoading">
   </app-button>
-
+    <!-- 
+      <pre>
+    selectedRow: {{ selectedRow == null}}
+    isLoading: {{ isLoading }}
+    isDirty: {{ isDirty }}
+    saveDisabled: {{ saveDisabled }}
+    </pre>  -->
   <app-button
     [label]="commitLabel || 'commit'"
     [imageSrc]="'/assets/img/icon/save.svg'"
     [onClick]="save"
     [showButton]="buttonVisibility.showSave!"
-    [disabled]="!selectedRow || isLoading">
+    [disabled]="!this.selectedRow || this.isLoading">
   </app-button>
 
   <app-button
@@ -117,7 +123,7 @@
               dir="ltr"
               inputmode="numeric"
               placeholder="XXXXXXXX"
-              [ngModel]="localMobile"
+              [ngModel]="localMobile[column.field] || ''"
               (ngModelChange)="onLocalChanged($event, column)"
               maxlength="8"
               [class.input-error]="isInvalid(column)" />
@@ -204,7 +210,7 @@
    <ng-template #readOnly>
   <div>
     <!-- date -->
-    <ng-container *ngIf="column.dataType === 'date'; else notDate">
+    <ng-container *ngIf="column.dataType === 'datetime'; else notDate">
       <input
                    class="custom-input date-field"
                    matInput
