--- a/src/app/Features/auth/components/login/login.component.html
+++ b/src/app/Features/auth/components/login/login.component.html
@@ -103,7 +103,7 @@
 
       <div class="error-banner" *ngIf="showError">{{ errorMessage }}</div>
 
-      <a routerLink="/forgot-password" class="forget">{{ 'forgetPassword' | translate }}</a>
+      <!-- <a routerLink="/forgot-password" class="forget">{{ 'forgetPassword' | translate }}</a> -->
     </div>
   </form>
 </main>
