--- a/src/app/Features/financial-transactions/components/financial-transactions-page/financial-transactions-page.component.html
+++ b/src/app/Features/financial-transactions/components/financial-transactions-page/financial-transactions-page.component.html
@@ -84,6 +84,7 @@
        [customUpdatedPath]="updatePath"
        (rowChanged)="onTransactionRowChanged($event)"
        (rowSaved)="onTransactionSaved($event)"
+       [confirmBeforeSave]="true"
       [buttonVisibility]="buttonVisibility"
        >
       </app-generic-form>
