--- a/src/app/shared/components/table-components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/table-components/generic-table/generic-table.component.html
@@ -98,16 +98,16 @@
           </app-table-column>
         </td>
         <!-- Footer Cell -->
-        <td mat-footer-cell *matFooterCellDef [style.width]="column.width">
+        <td mat-footer-cell *matFooterCellDef [style.width]="column.width" style="background-color: rgba(214, 212, 212, 0.623);">
         <ng-container *ngIf="showInTableFooter">
            <span *ngIf="column.showTotalLabel" class="table-custom-label header">
             {{ 'FinancialTransactions.Total' | translate }}
           </span>
-          <span *ngIf="column.showTotalAmountPaid" class="table-custom-label">
+          <span *ngIf="column.showTotalAmountPaid" class="table-custom-label header">
             {{ totals.totalAmountPaid | number:'1.2-2' }}
             {{ 'FinancialTransactions.Currency' | translate }}
           </span>
-           <span *ngIf="column.showTotalAmountRemaining" class="table-custom-label">
+           <span *ngIf="column.showTotalAmountRemaining" class="table-custom-label header">
             {{ totals.totalAmountRemaining | number:'1.2-2' }}
             {{ 'FinancialTransactions.Currency' | translate }}
           </span>
