--- a/src/app/shared/components/app-button/app-button.component.css
+++ b/src/app/shared/components/app-button/app-button.component.css
@@ -8,7 +8,6 @@
   min-height: 19px!important;
   border: var(--bg-color,#080437) !important;
   background-image: -webkit-linear-gradient(top, #CCE2F6 0%, #B1D2F2 100%) !important;
-  font-family: 'Bukra', sans-serif !important;
   display: inline-block !important;
   font-size: 10pt !important;
   text-align: center !important;
@@ -18,6 +17,8 @@
   border-radius: 20px!important;
   padding: 5px 20px!important;
   color: white !important;
+  font-family: 'cairoFont' !important;
+
 }
 
 .button_icon_style {
