--- a/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
+++ b/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
@@ -38,14 +38,14 @@
                                <i class="fas fa-map-marker-alt"></i>
                             </a>
 
-                                <a href="https://play.google.com/store/apps/details?id=YOUR.ANDROID.PACKAGE"
-                                  target="_blank" rel="noopener noreferrer" aria-label="Android app on Google Play">
-                                  <i class="fab fa-android"></i>
-                                </a>
-
                                 <a href="https://apps.apple.com/app/idYOUR_IOS_APP_ID"
                                   target="_blank" rel="noopener noreferrer" aria-label="iOS app on App Store">
                                   <i class="fab fa-apple"></i>
+                                </a>
+                                
+                                <a href="https://drive.usercontent.google.com/download?id=1Di5cIonnSZX0bUuyPJErmiIowcHpk8uT&export=download&authuser=0&confirm=t&uuid=cbb90276-be94-4292-bce8-528f71f5d098&at=AN8xHopE2JZyewptER0McymaVW7r:1757233944179"
+                                  target="_blank" rel="noopener noreferrer" aria-label="Android app on Google Play">
+                                  <i class="fab fa-android"></i>
                                 </a>
 
                             </div>
