--- a/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
+++ b/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
@@ -43,7 +43,7 @@
                                   <i class="fab fa-apple"></i>
                                 </a>
                                 
-                                <a href="https://drive.usercontent.google.com/download?id=1Di5cIonnSZX0bUuyPJErmiIowcHpk8uT&export=download&authuser=0&confirm=t&uuid=cbb90276-be94-4292-bce8-528f71f5d098&at=AN8xHopE2JZyewptER0McymaVW7r:1757233944179"
+                                <a href="https://drive.google.com/uc?export=download&id=1HNApkt8kyMS24mNZ3PnrAEKtGgFQe92h"
                                   target="_blank" rel="noopener noreferrer" aria-label="Android app on Google Play">
                                   <i class="fab fa-android"></i>
                                 </a>
