--- a/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
+++ b/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
@@ -107,7 +107,7 @@
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      {{ 'Footer.Address' | translate }}: {{ organization.address }}
+                     {{ organization.address }}
                     </a>
                   </li>
               </ul>
